# mobile_control

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scr/: constants.py  func.py  toggle_user_sessions.py  verifications.py
scr/API/: api_client.py  api_user.py
scr/BD/: auth.py
scr/BD/bd_users/: api_user.py  bd_server_user.py
scr/BD/bd_users/local/: create_bd.py  delete_bd.py  insert_bd.py  select_bd.py  update_bd.py
scr/components/: card_for_task.py  loading.py  onesignal.py  search_field.py
scr/navigation_apps/: navigations.py
scr/navigation_apps/users/doing_work/: act_info.py  alert_check_data.py  chose_meters.py  create_new_meters.py  photo_not_working_meters.py  sealing_meter.py  update_data_meters.py
scr/navigation_apps/users/doing_work/alert_dialog/: act_info.py  alert_check_data.py  create_new_meters.py  photo_not_working_meters.py  sealing_meter.py  update_data_meters.py
scr/navigation_apps/users/doing_work/chose_page/: page_appbar.py  page_content.py  page_floating_button.py
scr/navigation_apps/users/pages/: future_user_screen.py  main_users_screen.py  ratyng_user_screen.py  user_setting_screen.py
scr/navigation_apps/users/pages/future_task_page/: page_appbar.py  page_content.py  reschedule_to_another_date.py  viewing.py
scr/navigation_apps/users/pages/setting_page/: page_appbar.py  page_content.py
scr/navigation_apps/users/pages/task_page/: page_appbar.py  page_content.py
