[project]
name = "Mobile Control"
version = "1.6.0"
description = "Мобильное приложения для выполнения заданий контроллеров водоснабжения предриятия МП Трест Водоканал МО г.Магнитогорск"
authors = [
    { name = "Бобровников Никита Дмитриевич", email = "diobrando1234567890987654321@gmail.com" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flet==0.27.6",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "websockets==13.0.1",
    "flet-onesignal>=0.3.0",
    "flet-permission-handler"
]

[project.scripts]
mobile_control = "main:main"

[tool.setuptools.package-data]
mobile_control = [
    "assets/*",
    "storage/data/*",
    "storage/temp/*"
]

[tool.setuptools.data-files]
assets = [
    "assets/icon.png",
    "assets/splash_android.png"
]

[tool.flet]
app_name = "Мобильный Контролёр"
permissions = ["NOTIFICATIONS"]

[tool.flet.app.boot_screen]
show = true
message = "\u041f\u043e\u0434\u0433\u043e\u0442\u043e\u0432\u043a\u0430 \u043a \u0437\u0430\u043f\u0443\u0441\u043a\u0443"

[tool.flet.app.startup_screen]
show = true
message = "\u0417\u0430\u043f\u0443\u0441\u043a \u043f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u044f"
